--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
  <head>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3271401602364377"
+     crossorigin="anonymous"></script>
  </head>
  <body>
    <h1>Hello World<h1>
